--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="logo">🛠️ MadsonServiços 🏠
         <h6>Pequenos Consertos, Grandes Resultados</h6>
         <div class="buttons">
-            <a href="./madsonservicos/navegation/cadastrar.html" class="button">Cadastrar</a>
-            <a href="./madsonservicos/navegation/login.html" class="button">Login</a>
-            <a href="./madsonservicos/navegation/servicos.html" class="button">Serviços</a>
-            <a href="./madsonservicos/navegation/contato.html" class="button">Contato</a>
+            <a href="./cadastrar.html" class="button">Cadastrar</a>
+            <a href="./login.html" class="button">Login</a>
+            <a href="./servicos.html" class="button">Serviços</a>
+            <a href="./contato.html" class="button">Contato</a>
         </div>
     </div>
     <main>
