--- a/login.html
+++ b/login.html
@@ -7,41 +7,37 @@
     <meta name="author" content="Vinícius Pinto Gonçalves">
     <meta name="keywords" content="manutenção residencial, marido de aluguel, faz tudo, serviços de manutenção, reparos, reformas">
     <title>MadsonServiços</title>
-    <link rel="stylesheet" href="../css/contato.css">
-    <link rel="icon" href="../assets/images/icons/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./madsonservicos/css/login.css">
+    <link rel="icon" href="./madsonservicos/assets/images/icons/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="logo">🛠️ MadsonServiços 🏠
         <h6>Pequenos Consertos, Grandes Resultados</h6>
     </div>
     <main>
-        <h1> Você gostaria de entrar em contato conosco ?</h1>
-        <h2> Envie sua mensagem pelo formulário abaixo para tirarmos todas as suas dúvidas. </h2>
+        <h1>Seja bem Vindo(a), coloque suas informações abaixo, por favor!</h1>        
         <div class="form-container">
-            <section id="contatar">
-                <div class="contato">
-                    <h3>Contato</h3>
-                    <form action="#" method="post" novalidate>
+            <section id="login">
+                <div class="login">
+                    <h2>Login</h2>
+                    <form action="#" method="post">
                         <label for="email">E-mail</label>
                         <input type="text" placeholder="E-mail" id="email" name="email" required>
                         <span class="error-message">Este campo é obrigatório</span>
                         <p>É necessário um endereço de e-mail válido.</p>
 
-                        <label for="username">Usuário</label>
-                        <input type="text" placeholder="Usuário" id="username" name="username" required>
+                        <label for="password">Senha</label>
+                        <input type="text" placeholder="Senha" id="password" name="password" required>
                         <span class="error-message">Este campo é obrigatório</span>
-
-                        <label for="mensagem">Mensagem</label>
-                        <textarea id="mensagem" name="mensagem" rows="4" cols="50" placeholder="Escreva sua mensagem aqui"></textarea>
-                        <span class="error-message">Este campo é obrigatório</span>
+                        <p>É necessária uma senha válida.</p>
                     </form>
                 </div>
             </section>
         </div> <!-- Fim do form-container -->
 
         <!-- Botões -->
-        <div id="contact-form">
-            <button class="button">Enviar</button>
+        <div id="login-form">
+            <button class="button">Entrar</button>
             <a href="/index.html" class="button">Voltar</a>
         </div>
     </main>
@@ -50,11 +46,14 @@
     </footer>
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./madsonservicos/node_modules/bootstrap/dist/css/bootstrap.min.css">
         <!-- jQuery -->
-        <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="./madsonservicos/node_modules/jquery/dist/jquery.min.js"></script>
         <!-- Axios -->
-        <script src="../node_modules/axios/dist/axios.min.js"></script>
-        <script src="../js/script.js"></script>
+        <script src="./madsonservicos/node_modules/axios/dist/axios.min.js"></script>
+        <script src="./madsonservicos/js/script.js"></script>
 </body>
 </html>
+
+
+
