--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta name="author" content="Vinícius Pinto Gonçalves">
     <meta name="keywords" content="manutenção residencial, marido de aluguel, faz tudo, serviços de manutenção, reparos, reformas">
     <title>MadsonServiços</title>
-    <link rel="stylesheet" href="./madsonservicos/css/styles.css">
-    <link rel="icon" href="./madsonservicos/assets/images/icons/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="madsonservicos/css/styles.css">
+    <link rel="icon" href="madsonservicos/assets/images/icons/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="logo">🛠️ MadsonServiços 🏠
         <h6>Pequenos Consertos, Grandes Resultados</h6>
         <div class="buttons">
-            <a href="./cadastrar.html" class="button">Cadastrar</a>
-            <a href="./login.html" class="button">Login</a>
-            <a href="./servicos.html" class="button">Serviços</a>
-            <a href="./contato.html" class="button">Contato</a>
+            <a href="cadastrar.html" class="button">Cadastrar</a>
+            <a href="login.html" class="button">Login</a>
+            <a href="servicos.html" class="button">Serviços</a>
+            <a href="contato.html" class="button">Contato</a>
         </div>
     </div>
     <main>
@@ -25,7 +25,7 @@
             <h1>Serviços</h1>
             <div class="service">
                 <h3>Encanador</h3>
-                <img src="./madsonservicos/assets/images/Encanador.jpg" alt="Encanador" class="service-image">
+                <img src="madsonservicos/assets/images/Encanador.jpg" alt="Encanador" class="service-image">
                 <p class="formatted-information">
                     Um <strong>Encanador</strong> ou <strong>Bombeiro Hidráulico</strong> é  responsável pela instalação
                     e manutenção de sistemas usados para água potável, esgoto e drenagem em sistemas de encanamento.
@@ -34,7 +34,7 @@
             </div>
             <div class="service">
                 <h3>Eletricista</h3>
-                <img src="./madsonservicos/assets/images/Eletricista.jpg" alt="Eletricista" class="service-image">
+                <img src="madsonservicos/assets/images/Eletricista.jpg" alt="Eletricista" class="service-image">
                 <p class="formatted-information">
                     O <strong>Eletricista</strong> é o especialista em instalações elétricas residenciais, prediais
                     e industriais, atuando na instalação de novos componentes e na manutenção de infraestruturas elétricas,
@@ -43,7 +43,7 @@
             </div>
             <div class="service">
                 <h3>Montador de Móveis</h3>
-                <img src="./madsonservicos/assets/images/Montador.jpg" alt="Montador" class="service-image">
+                <img src="madsonservicos/assets/images/Montador.jpg" alt="Montador" class="service-image">
                 <p  class="formatted-information">
                     O <strong>Montador</strong> é a denominação de cargo do profissional que atua na montagem de 
                     móveis, na instalação de equipamentos e utensílios domésticos na residência ou em empresas. Além
@@ -52,7 +52,7 @@
             </div>
             <div class="service">
                 <h3>Chaveiro</h3>
-                <img src="./madsonservicos/assets/images/Chaveiro.jpg" alt="Chaveiro" class="service-image">
+                <img src="madsonservicos/assets/images/Chaveiro.jpg" alt="Chaveiro" class="service-image">
                 <p class="formatted-information">
                     O <strong>Chaveiro</strong> é o profissional responsável por fabricar e fazer cópias de 
                     chaves, trocar segredos e realizar manutenção de fechaduras, além de vender
@@ -61,7 +61,7 @@
             </div>
             <div class="service">
                 <h3>Desentupidora</h3>
-                <img src="./madsonservicos/assets/images/Desentupidora.jpg" alt="Desentupidora" class="service-image">
+                <img src="madsonservicos/assets/images/Desentupidora.jpg" alt="Desentupidora" class="service-image">
                 <p class="formatted-information">
                     Oferecemos o Serviço de <strong>Desentupidora</strong> com atendimento rápido e de qualidade
                     para atender qualquer tipo de emergência na área de desentupimento. Conte conosco para desentupir: 
@@ -70,7 +70,7 @@
             </div>
             <div class="service">
                 <h3>Jardineiro</h3>
-                <img src="./madsonservicos/assets/images/Jardineiro.jpg" alt="Jardineiro" class="service-image">
+                <img src="madsonservicos/assets/images/Jardineiro.jpg" alt="Jardineiro" class="service-image">
                 <p class="formatted-information">
                     O <strong>Jardineiro</strong> é o profissional responsável por cuidar do jardim dos prédios,
                     casas, empresas, parques, condomínios, escolas e etc. É essencial que tenha
@@ -79,7 +79,7 @@
             </div>
             <div class="service">
                 <h3>Fretes e Mudanças</h3>
-                <img src="./madsonservicos/assets/images/Frentes_e_Mudanças.jpg" alt="Frentes_e_Mudanças" class="service-image">
+                <img src="madsonservicos/assets/images/Frentes_e_Mudanças.jpg" alt="Frentes_e_Mudanças" class="service-image">
                 <p class="formatted-information">
                     Buscando uma equipe especializada em <strong>transporte</strong> de mercadorias,
                     <strong>mudança</strong> ou <strong>pequenos fretes</strong> ? Conheça nossos serviços oferecidos.
@@ -88,7 +88,7 @@
             </div>
             <div class="service">
                 <h3>Técnico em Refrigeração</h3>
-                <img src="./madsonservicos/assets/images/Tecnico_em_Refrigeração.jpg" alt="Tecnico_em_Refrigeração" class="service-image">
+                <img src="madsonservicos/assets/images/Tecnico_em_Refrigeração.jpg" alt="Tecnico_em_Refrigeração" class="service-image">
                 <p class="formatted-information">
                     O <strong>Técnico em Refrigeração e Climatização</strong> é um profissional capacitado para projetar, instalar
                     e manter sistemas de refrigeração e climatização, conforme normas técnicas, ambientais e de segurança.
@@ -96,7 +96,7 @@
             </div>
             <div class="service">
                 <h3>Serralheiro</h3>
-                <img src="./madsonservicos/assets/images/Serralheiro.jpg" alt="Serralheiro" class="service-image">
+                <img src="madsonservicos/assets/images/Serralheiro.jpg" alt="Serralheiro" class="service-image">
                 <p class="formatted-information">
                     O <strong>Serralheiro</strong> é o profissional responsável por atuar com a realização de cortes de
                     tubos, alumínios e acabamentos de peças. Um Serralheiro irá atuar com corte dobra traçagem,
@@ -105,7 +105,7 @@
             </div>
             <div class="service">
                 <h3>Técnico em Informática</h3>
-                <img src="./madsonservicos/assets/images/Tecnico_em_Informatica.jpg" alt="Tecnico_em_Informatica" class="service-image">
+                <img src="madsonservicos/assets/images/Tecnico_em_Informatica.jpg" alt="Tecnico_em_Informatica" class="service-image">
                 <p class="formatted-information">
                     Um <strong>Técnico em Informática</strong> é o profissional que está apto a realizar configurações em
                     computadores, redes de internet, instalar equipamentos e a verificar as causas de falhas. 
@@ -114,7 +114,7 @@
             </div>
             <div class="service">
                 <h3>Pintor</h3>
-                <img src="./madsonservicos/assets/images/Pintor.jpg" alt="Pintor" class="service-image">
+                <img src="madsonservicos/assets/images/Pintor.jpg" alt="Pintor" class="service-image">
                 <p class="formatted-information">
                     O <strong>Pintor</strong> é responsável pela proteção e decoração de paredes. E
                     têm como proposito melhorar os aspetos estéticos e a sua proteção contra os efeitos
@@ -124,7 +124,7 @@
             </div>
             <div class="service">
                 <h3>Dedetizador</h3>
-                <img src="./madsonservicos/assets/images/Dedetizador.jpg" alt="Dedetizador" class="service-image">
+                <img src="madsonservicos/assets/images/Dedetizador.jpg" alt="Dedetizador" class="service-image">
                 <p class="formatted-information">
                     O <strong>dedetizador</strong> é o profissional habilitado no combate a pragas: escorpiões, lacraias, 
                     moscas, mosquitos, baratas, pulgas, traças, percevejos, carrapatos. É essencial controlar a grande variedade
@@ -133,7 +133,7 @@
             </div>
             <div class="service">
                 <h3>Vidraceiro</h3>
-                <img src="./madsonservicos/assets/images/Vidraceiro.jpg" alt="Vidraceiro" class="service-image">
+                <img src="madsonservicos/assets/images/Vidraceiro.jpg" alt="Vidraceiro" class="service-image">
                 <p class="formatted-information">
                     O <strong>Vidraceiro</strong> prepara máquinas , equipamentos e instrumentos para corte de vidros.
                     Cortam, e instalam vidros, vitrais e espelhos. temperam vidros e montam vidros temperados.
@@ -142,7 +142,7 @@
             </div>
             <div class="service">
                 <h3>Limpeza de Piscina</h3>
-                <img src="./madsonservicos/assets/images/Limpeza_de_Piscina.jpg" alt="Limpeza_de_Piscina" class="service-image">
+                <img src="madsonservicos/assets/images/Limpeza_de_Piscina.jpg" alt="Limpeza_de_Piscina" class="service-image">
                 <p class="formatted-information">
                     A função principal do <strong>piscineiro</strong> será a manutenção preventiva mantendo sua piscina
                     pronta para o uso. Para fazer isso, ele precisará realizar a manutenção de diversas maneiras. Isso
@@ -157,7 +157,7 @@
                     <p>Aqui você encontra flexibilidade nos pagamentos.</p>
                     <em>Aceitamos e parcelamos via cartão de crédito.</em>
                 </div>
-                <img src="./madsonservicos/assets/images/FormasDePagamento.png" alt="formas_de_pagamento" class="payment-image">
+                <img src="madsonservicos/assets/images/FormasDePagamento.png" alt="formas_de_pagamento" class="payment-image">
             </section>
         </div>
         <footer>
@@ -165,11 +165,11 @@
         </footer>
     </main>
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="./madsonservicos/node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="madsonservicos/node_modules/bootstrap/dist/css/bootstrap.min.css">
         <!-- jQuery -->
-        <script src="./madsonservicos/node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="madsonservicos/node_modules/jquery/dist/jquery.min.js"></script>
         <!-- Axios -->
-        <script src="./madsonservicos/node_modules/axios/dist/axios.min.js"></script>
-        <script src="./madsonservicos/js/script.js"></script>
+        <script src="madsonservicos/node_modules/axios/dist/axios.min.js"></script>
+        <script src="madsonservicos/js/script.js"></script>
 </body>
 </html>
