--- a/servicoSelecionados.html
+++ b/servicoSelecionados.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Vinícius Pinto Gonçalves">
     <meta name="keywords" content="manutenção residencial, marido de aluguel, faz tudo, serviços de manutenção, reparos, reformas">
     <title>MadsonServiços</title>
-    <link rel="stylesheet" href="./madsonservicos/css/servicosSelecionados.css">
-    <link rel="icon" href="./madsonservicos/assets/images/icons/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="madsonservicos/css/servicosSelecionados.css">
+    <link rel="icon" href="madsonservicos/assets/images/icons/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="logo">🛠️ MadsonServiços 🏠
@@ -17,8 +17,8 @@
     <main>
         <section id="Serviços Selecionados">
             <div class="button-container">
-                <a href="./servicos.html" class="button">Voltar</a>
-                <a href="./finalizarCompra.html" class="button">Continuar</a>
+                <a href="servicos.html" class="button">Voltar</a>
+                <a href="finalizarCompra.html" class="button">Continuar</a>
             </div>
             <h1>Serviços Selecionados</h1>
             <ul id="cart-items"></ul> 
@@ -30,7 +30,7 @@
                         <p>Aqui você encontra flexibilidade nos pagamentos.</p>
                         <em>Aceitamos e parcelamos via cartão de crédito.</em>
                     </div>
-                    <img src="./madsonservicos/assets/images/FormasDePagamento.png" alt="formas_de_pagamento" class="payment-image">
+                    <img src="madsonservicos/assets/images/FormasDePagamento.png" alt="formas_de_pagamento" class="payment-image">
                 </section>
             </div>
     </main>
@@ -38,11 +38,11 @@
         &copy; 2024 MadsonServiços. Todos os direitos reservados.
     </footer> 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="./madsonservicos/node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="madsonservicos/node_modules/bootstrap/dist/css/bootstrap.min.css">
         <!-- jQuery -->
-        <script src="./madsonservicos/node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="madsonservicos/node_modules/jquery/dist/jquery.min.js"></script>
         <!-- Axios -->
-        <script src="./madsonservicos/node_modules/axios/dist/axios.min.js"></script>
-        <script src="./madsonservicos/js/script.js"></script>
+        <script src="madsonservicos/node_modules/axios/dist/axios.min.js"></script>
+        <script src="madsonservicos/js/script.js"></script>
 </body>
 </html>
