--- a/contato.html
+++ b/contato.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Vinícius Pinto Gonçalves">
     <meta name="keywords" content="manutenção residencial, marido de aluguel, faz tudo, serviços de manutenção, reparos, reformas">
     <title>MadsonServiços</title>
-    <link rel="stylesheet" href="./madsonservicos/css/contato.css">
-    <link rel="icon" href="./madsonservicos/assets/images/icons/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="madsonservicos/css/contato.css">
+    <link rel="icon" href="madsonservicos/assets/images/icons/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="logo">🛠️ MadsonServiços 🏠
@@ -42,7 +42,7 @@
         <!-- Botões -->
         <div id="contact-form">
             <button class="button">Enviar</button>
-            <a href="/index.html" class="button">Voltar</a>
+            <a href="index.html" class="button">Voltar</a>
         </div>
     </main>
     <footer>
@@ -50,11 +50,11 @@
     </footer>
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="./madsonservicos/node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="madsonservicos/node_modules/bootstrap/dist/css/bootstrap.min.css">
         <!-- jQuery -->
-        <script src="./madsonservicos/node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="madsonservicos/node_modules/jquery/dist/jquery.min.js"></script>
         <!-- Axios -->
-        <script src="./madsonservicos/node_modules/axios/dist/axios.min.js"></script>
-        <script src="./madsonservicos/js/script.js"></script>
+        <script src="madsonservicos/node_modules/axios/dist/axios.min.js"></script>
+        <script src="madsonservicos/js/script.js"></script>
 </body>
 </html>
